@@ -1,4 +1,6 @@
 ver 0.19 (not yet released)
+* protocol
+  - new commands "addtagid", "cleartagid"
 * new resampler option using libsoxr
 
 ver 0.18.5 (2013/11/23)
